gitops/clusters/homelab/infra/kubernetes-dashboard/middleware-headers-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-https-headers
  namespace: kubernetes-dashboard
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Port: "443"
