gitops/clusters/homelab/infra/kubernetes-dashboard/middleware-lan-only.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-only
  namespace: kubernetes-dashboard
spec:
  ipAllowList:
    sourceRange:
      - 192.168.0.0/16
