gitops/clusters/homelab/infra/kubernetes-dashboard/ingressroute-k8s-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kube.local.nasbenito.com`)
      kind: Rule
      middlewares:
        - name: lan-only
          namespace: kubernetes-dashboard
      services:
        - name: kubernetes-dashboard-kong-proxy
          namespace: kubernetes-dashboard
          port: 443
          scheme: https
          serversTransport: k8s-dashboard-kong-transport
  tls:
    secretName: k8s-dashboard-tls
